@@ -1109,6 +1109,25 @@
     <varlistentry>
         <term>
             <command>
+                <option>format_time</option>
+            </command>
+            <option>seconds format</option>
+        </term>
+        <listitem>Format time given in seconds. Format is a string
+	that should start and end with a "-char. The "-chars are not
+	part of the output, \w,\d,\h,\m,\s and \\ are replaced by
+	weeks,days,hours,minutes,seconds and \. If you leave out a unit,
+	it's value will be expressed in the highest unite lower then the
+	one left out. Text between ()-chars will not be visible if a
+	replaced unit in this text is 0. If seconds is a decimal number
+	then you can see the numbers behind the point by using \S
+	followed by a number that specifies the amount of
+	digits behind the point that you want to see (maximum 9).
+        <para /></listitem>
+    </varlistentry>
+    <varlistentry>
+        <term>
+            <command>
                 <option>forwarded_mails</option>
             </command>
             <option>(maildir)</option>
