@@ -638,6 +638,9 @@ struct text_object *construct_text_object(const char *s, const char *arg, long
 	END OBJ(desktop_number, &update_x11info)
 	END OBJ(desktop_name, &update_x11info)
 #endif
+	END OBJ_ARG(format_time, 0, "format_time needs a pid as argument")
+		obj->sub = malloc(sizeof(struct text_object));
+		extract_variable_text_internal(obj->sub, arg);
 	END OBJ(nodename, 0)
 	END OBJ_ARG(cmdline_to_pid, 0, "cmdline_to_pid needs a command line as argument")
 		scan_cmdline_to_pid_arg(obj, arg, free_at_crash);
@@ -1360,6 +1363,7 @@ void free_text_objects(struct text_object *root, int internal)
 			case OBJ_cmdline_to_pid:
 				free(data.s);
 				break;
+			case OBJ_format_time:
 			case OBJ_pid_environ:
 			case OBJ_pid_chroot:
 			case OBJ_pid_cmdline:
