@@ -1,3 +1,6 @@
+2009-11-17
+	* Added support for $format_time
+
 2009-11-16
 	* Added support for $pid_threads, $pid_thread_list, $pid_nice,
 	$pid_priority, $pid_time_usermode, $pid_time_kernelmode and $pid_time
